# backtest-engine

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml  daily_bot.yml
backtest_engine/: __init__.py
backtest_engine/backtest/: engine.py  position_sizing.py  walk_forward.py
backtest_engine/data/: loader.py
backtest_engine/live/: alpaca_client.py  safety_checks.py  strategy_runner.py
backtest_engine/metrics/: performance.py
backtest_engine/strategies/: mean_reversion.py  momentum.py  multi_asset.py  portfolio.py  regime.py  sma_crossover.py
backtest_engine/utils/: indicators.py
dashboard/: app.py
notebooks/: 01_sma_crossover.ipynb  02_momentum.ipynb  03_walk_forward.ipynb  04_regime_filter.ipynb  05_multi_asset.ipynb  06_combined_strategy.ipynb
results/: backtest_momentum_2018_2024.parquet  live_log_2026-04-28.json  live_log_2026-04-29.json  live_log_2026-04-30.json  live_log_2026-05-01.json  live_log_2026-05-04.json  live_log_2026-05-05.json  live_log_2026-05-06.json  live_log_2026-05-07.json  live_log_2026-05-08.json  live_log_2026-05-11.json  live_log_2026-05-12.json  live_log_2026-05-13.json  live_log_2026-05-14.json  live_log_2026-05-15.json  live_log_2026-05-18.json  live_log_2026-05-19.json  live_log_2026-05-20.json  live_log_2026-05-21.json  live_log_2026-05-22.json  live_log_2026-05-25.json  live_log_2026-05-26.json  live_log_2026-05-27.json  live_log_2026-05-28.json  live_log_2026-05-29.json  live_log_2026-06-01.json  live_log_2026-06-02.json  live_log_2026-06-03.json  live_log_2026-06-04.json  live_log_2026-06-05.json  live_log_2026-06-08.json  live_log_2026-06-09.json  live_log_2026-06-10.json  live_log_2026-06-11.json  live_log_2026-06-12.json  live_log_2026-06-15.json  live_log_2026-06-16.json  live_log_2026-06-17.json  live_log_2026-06-18.json  live_log_2026-06-19.json  (+24 more)
scripts/: run_live.py
tests/: test_engine.py  test_loader.py  test_mean_reversion.py  test_multi_asset.py  test_performance.py  test_position_sizing.py  test_regime.py  test_safety_checks.py  test_strategy_runner.py
